# DMLTester

./: CMakeLists.txt  main.cpp
CriteriaRelation/: CriteriaRelation.h  CriteriaRelationConverter.cpp  CriteriaRelationConverter.h
CriteriaRelation/Relations/: AllCriteriaRelation.cpp  AllCriteriaRelation.h  SimpleCriteriaRelation.cpp  SimpleCriteriaRelation.h  TwoCriteriaRelation.cpp  TwoCriteriaRelation.h  WeightCriteriaRelation.cpp  WeightCriteriaRelation.h
CriteriaRelation/Relations/SimpleCriteriaRelationUtils/: Node.cpp  Node.h  SimpleCriteriaRelationUtil.cpp  SimpleCriteriaRelationUtil.h
CriteriaRelation/Relations/WeightCriteriaRelations/: ProportionalMethod.cpp  ProportionalMethod.h  SimpleRankingMethod.cpp  SimpleRankingMethod.h
DecisionMakingMethod/: DecisionMakingMethod.cpp  DecisionMakingMethod.h  SolveStatus.cpp  SolveStatus.h
DecisionMakingMethod/AbstractMultiCriteriaMethod/: MultiCriteriaMethod.h
DecisionMakingMethod/AbstractMultiCriteriaMethod/MultiCriteriaMethods/: MultiStepMethod.h  SequentialNarrowingAlternativesMethod.h
DecisionMakingMethod/DecisionMakerInfo/: DecisionMakerInfo.h
DecisionMakingMethod/Methods/: CriteriaAggregationMethod.cpp  CriteriaAggregationMethod.h  LexicographicOptimization.cpp  LexicographicOptimization.h  SuccessiveConcessionsMethod.cpp
MathModel/: MathModel.cpp  MathModel.h
MathModel/Components/: Criteria.cpp  Criteria.h  CriteriaRelation.cpp  CriteriaRelation.h  EstimateVector.cpp  EstimateVector.h
Solver/MultiCriteriaMethodSolver/: OneStepMultiCriteriaMethodSolver.cpp  OneStepMultiCriteriaMethodSolver.h
(+9 files in other folders)
